# biubiubiu

./: README.md
GL/learnopengl.com/examples/offscreen/: CMakeLists.txt
GL/learnopengl.com/examples/offscreen/doc/: cmdline.ggo  offscreen  texture.fs  texture.vs
GL/learnopengl.com/examples/offscreen/src/: CMakeLists.txt  cmdline.cpp  cmdline.h  glad.c  glfwWin.cpp  glfwWin.h  main.cpp  shader.hpp
GL/learnopengl.com/libraries/include/glad/: glad.h
GL/learnopengl.com/libraries/lib/cmake/glfw3/: glfw3Targets.cmake
GL/learnopengl.com/libraries/lib/pkgconfig/: glfw3.pc
GL/offscreen/: CMakeLists.txt
GL/offscreen/doc/: cmdline.ggo
GL/offscreen/src/: CMakeLists.txt  cmdline.cpp  main.cpp  offscreen.cpp  offscreen.h  pngdecoder.c  pngdecoder.h
